<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SpisrettHome" >    

    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:src="@drawable/logo_spisrett" />
    
    <LinearLayout
    android:id="@+id/linear_layout2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_below="@+id/imageView1"
     >

     <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:textColor="@color/color_button_green"
	    android:textSize="20sp"
	    android:text="@string/text_wellcome"
       />   
        
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	     android:gravity="center"
        android:orientation="vertical" >
	        <EditText
	            android:background="@drawable/shape_oval"
	            android:layout_height="30dp"
	            android:layout_width="@dimen/dimen_registration_layout"
	            android:layout_marginTop ="1dp"
	            android:textSize="15dp"
	            android:hint="@string/text_user_name"
	             />
	        
	        <EditText
	            android:background="@drawable/shape_oval"
	            android:layout_width="@dimen/dimen_registration_layout"
	            android:layout_marginTop ="1dp"
	            android:layout_height="30dp"
	            android:textSize="15dp"
	            android:hint="@string/text_password"
	            />
	        
	        <Button
	            android:id="@+id/login_button"
	            android:layout_width="@dimen/dimen_registration_layout"
	            android:layout_height="30dp"
	            android:background="@color/color_button_green"
	            android:layout_marginTop="10dp"
	            android:gravity="center_horizontal"
	            android:text="@string/text_login"
	             />

	         <TextView 
	            android:layout_width="@dimen/dimen_registration_layout"
	            android:layout_height="wrap_content"
	            android:text="@string/text_forgot_password"
	            android:gravity="center"
	            />
	         
	        <ImageView 
	            android:layout_width="fill_parent"
	            android:src="@drawable/thin_white_line"
	            android:paddingTop="10dp"
	             android:paddingBottom="10dp"
	            android:layout_height="wrap_content"
	            />
	       
	        
	        <Button 
	            android:id="@+id/registration_button_from_login"
	            android:background="@color/color_button_red"
	            android:layout_width="@dimen/dimen_registration_layout"
	            android:layout_height="30dp"
	             android:layout_marginTop="10dp" 
	             android:text="@string/text_create_acount"
	            />
	        
	    </LinearLayout> 
	    
	
</LinearLayout>
    

</RelativeLayout>